--- a/apps/solid-start-todo/package.json
+++ b/apps/solid-start-todo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-with-tailwindcss",
+  "name": "solid-start-todo",
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
