--- a/apps/tanstack-router-todo/package.json
+++ b/apps/tanstack-router-todo/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@ethang/eslint-config": "^19.5.3",
     "@tanstack/router-plugin": "^1.57.9",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -24,10 +25,17 @@
     "vite": "^5.4.3"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.37",
+    "@nextui-org/modal": "^2.0.39",
     "@nextui-org/react": "^2.4.6",
+    "@nextui-org/table": "^2.0.39",
+    "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-router": "^1.57.9",
     "@tanstack/router-devtools": "^1.57.9",
     "framer-motion": "^11.5.4",
+    "idb": "^8.0.0",
+    "lucide-react": "^0.439.0",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
