--- a/apps/tanstack-router-todo/package.json
+++ b/apps/tanstack-router-todo/package.json
@@ -8,7 +8,8 @@
     "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "lint": "eslint src --fix --ignore-pattern src/routeTree.gen.ts"
   },
   "devDependencies": {
     "@ethang/eslint-config": "^19.5.3",
