--- a/apps/tanstack-router-todo/package.json
+++ b/apps/tanstack-router-todo/package.json
@@ -13,7 +13,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite",
-    "lint": "eslint src --fix --ignore-pattern src/routeTree.gen.ts"
+    "lint": "eslint src --fix --ignore-pattern src/routeTree.gen.ts --debug"
   },
   "devDependencies": {
     "@ethang/eslint-config": "^19.5.3",
@@ -27,6 +27,7 @@
     "eslint": "^9.10.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
+    "type-fest": "^4.26.1",
     "typescript-eslint": "^8.5.0",
     "vite": "^5.4.3"
   },
@@ -39,9 +40,11 @@
     "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-router": "^1.57.9",
+    "@tanstack/react-store": "^0.5.5",
     "@tanstack/router-devtools": "^1.57.9",
     "framer-motion": "^11.5.4",
     "idb": "^8.0.0",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
     "luxon": "^3.5.0",
