--- a/apps/tanstack-router-todo/package.json
+++ b/apps/tanstack-router-todo/package.json
@@ -16,39 +16,42 @@
     "lint": "eslint src --fix --ignore-pattern src/routeTree.gen.ts --debug"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^19.5.3",
-    "@tanstack/router-plugin": "^1.57.9",
+    "@ethang/eslint-config": "^19.6.7",
+    "@tanstack/router-plugin": "^1.58.4",
     "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.10.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.10",
+    "eslint": "^9.11.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "type-fest": "^4.26.1",
-    "typescript-eslint": "^8.5.0",
-    "vite": "^5.4.3"
+    "typescript-eslint": "^8.6.0",
+    "vite": "^5.4.7"
   },
   "dependencies": {
-    "@ethang/toolbelt": "^4.1.1",
-    "@nextui-org/button": "^2.0.37",
-    "@nextui-org/modal": "^2.0.39",
-    "@nextui-org/react": "^2.4.6",
-    "@nextui-org/table": "^2.0.39",
-    "@tanstack/react-query": "^5.55.4",
+    "@ethang/store": "^1.0.4",
+    "@ethang/toolbelt": "^4.2.7",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/table": "^2.0.40",
+    "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
-    "@tanstack/react-router": "^1.57.9",
+    "@tanstack/react-router": "^1.58.3",
     "@tanstack/react-store": "^0.5.5",
-    "@tanstack/router-devtools": "^1.57.9",
-    "framer-motion": "^11.5.4",
+    "@tanstack/router-devtools": "^1.58.3",
+    "framer-motion": "^11.5.6",
     "idb": "^8.0.0",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.439.0",
+    "lucide-react": "^0.445.0",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0"
   }
 }
